--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@emotion/styled": "^11.10.6",
     "axios": "^1.5.0",
     "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
     "firebase": "^9.17.2",
     "framer-motion": "^10.0.1",
     "nodemon": "^3.0.1",
@@ -28,6 +27,7 @@
     "react-hook-form": "^7.43.4",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
+    "react-simple-wysiwyg": "^2.2.5",
     "react-textarea-autosize": "^8.4.0",
     "rxjs": "^7.8.1"
   },
